issue on ios for pdf render

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,13 @@
 
 @media (max-width: 1024px) {
     .react-pdf__Page__canvas {
-        width: 299px; /* Largeur spécifique pour les écrans mobiles */
-        height: auto; /* Hauteur ajustée automatiquement pour conserver la proportion */
+        width: 299px;
+        height: auto;
+    }
+}
+
+@media (width: 320px) {
+    .radar-chart-mobile {
+        width: 299px;
     }
 }
